--- a/src/app/components/content-sidebar/content-sidebar.component.html
+++ b/src/app/components/content-sidebar/content-sidebar.component.html
@@ -1,3 +1,3 @@
 <app-content-sidebar-header></app-content-sidebar-header>
-<p>content-sidebar works!</p>
-<router-outlet></router-outlet>
+<!-- <p>content-sidebar works!</p>
+<router-outlet></router-outlet> -->
