finished example of messanger

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,1 +1,16 @@
-<h1>LOGIN!!!</h1>
+<div class="login-container">
+  <form [formGroup]="loginForm" (submit)="onSubmit()" class="login-form">
+    <h1>LOGIN</h1>
+    <mat-form-field class="login-form-field">
+      <mat-label>Login</mat-label>
+      <input matInput />
+    </mat-form-field>
+
+    <mat-form-field class="login-form-field">
+      <mat-label>Password</mat-label>
+      <input type="password" matInput />
+    </mat-form-field>
+    <button mat-flat-button color="primary" type="submit">Login</button>
+    <button mat-button type="button">Reset password</button>
+  </form>
+</div>
