--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -2,10 +2,14 @@
   <app-nav-sidebar class="nav-sidebar"></app-nav-sidebar>
   <mat-drawer-container class="main-drawer-container">
     <mat-drawer class="content-sidebar" mode="side" opened>
-      <h2>Drawer content</h2>
-      <!-- <app-content-sidebar></app-content-sidebar> -->
+      <app-content-sidebar-header></app-content-sidebar-header>
       <router-outlet></router-outlet>
     </mat-drawer>
-    <mat-drawer-content>Main content</mat-drawer-content>
+    <mat-drawer-content>
+      <ng-container *ngIf="tabs.selectedTab" [ngSwitch]="tabs.selectedTab.tabType">
+        <app-chat *ngSwitchCase="'chat'" [chatTitle]="tabs.selectedTab.tabTitle" [messages]="exampleMessages"></app-chat>
+        <app-user-profile *ngSwitchCase="'user-profile'"></app-user-profile>
+      </ng-container>
+    </mat-drawer-content>
   </mat-drawer-container>
 </div>
